【新增】pgsql测试代码